--- a/kggraph/conf/hugegraph-0.10.4/rest-server.properties
+++ b/kggraph/conf/hugegraph-0.10.4/rest-server.properties
@@ -4,8 +4,14 @@ restserver.url=http://0.0.0.0:8080
 # graphs list with pair NAME:CONF_PATH
 graphs=[yituKg:conf/yituKg.properties]
 
+restserver.request_timeout=120
+gremlinserver.timeout=120
+task.wait_timeout=20
+
 batch.max_vertices_per_batch=10000
 batch.max_edges_per_batch=10000
+restserver.max_worker_threads=100
+batch.max_write_threads=100
 
 # authentication
 auth.authenticator=com.baidu.hugegraph.auth.StandardAuthenticator
