--- a/kggraph/conf/hugegraph-0.10.4/yituKg.properties
+++ b/kggraph/conf/hugegraph-0.10.4/yituKg.properties
@@ -6,6 +6,13 @@ gremlin.graph=com.baidu.hugegraph.auth.HugeFactoryAuthProxy
 #graph.cache_capacity=10485760
 #graph.cache_expire=600
 
+graph.cache_capacity=0
+vertex.cache_capacity=0
+edge.cache_capacity=0
+vertex.tx_capacity=10000
+edge.tx_capacity=10000
+
+
 # schema illegal name template
 #schema.illegal_name_regex=\s+|~.*
 
