--- a/kggraph/docker-compose.yaml
+++ b/kggraph/docker-compose.yaml
@@ -2,22 +2,27 @@ version: "2"
 
 services:
   kggraph:
-    image: it-artifactory.yitu-inc.com/docker/test/fxu/kg-graph:v0.2.8
+    image: it-artifactory.yitu-inc.com/docker/test/fxu/kg-graph:v0.2.10
     ports:
       - 8080:8080
     volumes:
         # 数据存储的目录
-      - ./data/hugegraph-0.9.2/:/app/hugegraph-0.9.2/rocksdb-data/
+      - ./data/hugegraph-0.10.4/:/app/hugegraph-0.10.4/rocksdb-data/
         # 执行日志目录
-      - ./logs/hugegraph-0.9.2/:/app/hugegraph-0.9.2/logs/
-      - ./conf/hugegraph-0.9.2/rest-server.properties:/app/hugegraph-0.9.2/conf/rest-server.properties
-      - ./conf/hugegraph-0.9.2/yituKg.properties:/app/hugegraph-0.9.2/conf/yituKg.properties
-      - ./conf/hugegraph-0.9.2/gremlin-server.yaml:/app/hugegraph-0.9.2/conf/gremlin-server.yaml
+      - ./logs/hugegraph-0.10.4/:/app/hugegraph-0.10.4/logs/
+      - ./conf/hugegraph-0.10.4/gremlin-server.yaml:/app/hugegraph-0.10.4/conf/gremlin-server.yaml
+      - ./conf/hugegraph-0.10.4/rest-server.properties:/app/hugegraph-0.10.4/conf/rest-server.properties
+      - ./conf/hugegraph-0.10.4/yituKg.properties:/app/hugegraph-0.10.4/conf/yituKg.properties
+
+    environment:
+      - TZ=Asia/Shanghai
+      - SW_AGENT_NAME=kggraph
+      - SW_AGENT_COLLECTOR_BACKEND_SERVICES=oap:11800
 
   kggraph-studio:
-    image: it-artifactory.yitu-inc.com/docker/test/fxu/kg-graph-studio:v0.2.8
+    image: it-artifactory.yitu-inc.com/docker/test/fxu/kg-graph-studio:v0.2.10
     ports:
       - 8088:8088
     volumes:
-      - ./conf/hugegraph-studio-0.9.0/:/app/hugegraph-studio-0.9.0/conf/
+      - ./conf/hugegraph-studio-0.10.0/:/app/hugegraph-studio-0.10.0/conf/
     
