--- a/clickhouse/docker-compose.yml
+++ b/clickhouse/docker-compose.yml
@@ -7,19 +7,17 @@ services:
       - 8123:8123
       - 9000:9000
       - 9009:9009
-
     ulimits:
       nproc: 65535
       nofile:
         soft: 262144
         hard: 262144
-
     volumes:
       - ./data/:/var/lib/clickhouse
       - ./conf/config.xml:/etc/clickhouse-server/config.xml
 
-  client:
-    image: yandex/clickhouse-client
-    command: ['--host', 'clickhouse-server', '--query', 'show databases']
-    links:
-      - clickhouse-server
+#  client:
+#    image: yandex/clickhouse-client
+#    command: ['--host', 'clickhouse-server', '--query', 'show databases']
+#    links:
+#      - clickhouse-server
