--- a/fip/fip-main/config/application-flash3_clusters.yaml
+++ b/fip/fip-main/config/application-flash3_clusters.yaml
@@ -1,13 +1,12 @@
 flash3-clusters:
   flash3_clusters:
-    -
-      ip: 10.40.58.212
-      id: fip-test
-      name: fip-test
+    - ip: 10.40.58.212
+      id: fip-flash
+      name: fip-flash
       region:
-        province: 上海
-        city: 上海
-        county: 浦东
+        province: 上海市
+        city: 上海市
+        county: 长宁区
       product_info:
         product_name: fip
         product_version: 1.9.4
