--- a/fip/fip-main/config/application-fp_clusters.yaml
+++ b/fip/fip-main/config/application-fp_clusters.yaml
@@ -4,9 +4,9 @@ fp-clusters:
       id: fp_cluster_id1
       name: fp_cluster_name1
       region:
-        province: 上海
-        city: 上海
-        county: 浦东
+        province: 上海市
+        city: 上海市
+        county: 浦东区
       product_info:
         product_name: fp
         product_version: 1.8.4
@@ -16,9 +16,9 @@ fp-clusters:
       id: fp_cluster_id2
       name: fp_cluster_name2
       region:
-        province: 上海
-        city: 上海
-        county: 中国
+        province: 上海市
+        city: 上海市
+        county: 黄浦区
       product_info:
         product_name: fp
         product_version: 1.9.4
