--- a/fip/fip-main/config/application.yaml
+++ b/fip/fip-main/config/application.yaml
@@ -30,9 +30,9 @@ repo:
   default_model: 3060
 
 p2p-config:
-  proxyUrl: p2p-api-gateway
-  proxyPort: 18888
-  p2pInfoPort: 6600
+  proxyUrl: p2p-component
+  proxyPort: 7093
+  p2pInfoPort: 7600
 
 task-config:
   taskAliveDuration: 8400000
@@ -47,7 +47,7 @@ spring:
   redis:
     host: redis
     port: 6379
-    password: 
+    password:
 
 pilot:
   url: http://pilot:8080
@@ -66,8 +66,8 @@ cvpf-repository-manager:
   part: FACE
 
 license:
-  host: 10.40.80.18
-  port: 7411
+#  host: 10.40.80.18
+#  port: 7411
   conn_timeout: 2000
   send_timeout: 2000
   recv_timeout: 6000
@@ -78,9 +78,9 @@ license:
   check_period: 10000
 
 ragnaros:
-  lucifron_host:  10.40.80.43
-  lucifron_port:  9990
-#  local_host:  127.0.0.1
+#  lucifron_host:  10.40.80.43
+#  lucifron_port:  9990
+  #  local_host:  127.0.0.1
   video_callback_port: 3456
   face_image_feature_extract_group:  sample-feature-extract
   face_anno_image_feature_extract_group:  sample-anno-feature-extract
@@ -97,13 +97,14 @@ cluster-info:
   gatewayPort: 9080
   productName: fip
   productVersion: 2.2.a
-  clusterId: hulk01
-  clusterName: hulk01
-  province: SH
-  city: SH
-  county: MH
+#  clusterId: hulk01
+#  clusterName: hulk01
+#  province: SH
+#  city: SH
+#  county: MH
 
 
 job:
-  cluster-info-update: ${JOB_CLUSTER_INFO_UPDATE:0 5 22 * * ?}
+  cluster-info-update: ${JOB_CLUSTER_INFO_UPDATE:0 * * * * ?}
   task-maintance:  ${TASK_MAINTANCE:0 5 0 * * ?}
+  cluster-report: ${JOB_CLUSTER_REPORT:0 0/30 * * * ?}
