--- a/fip/p2p/config/application.yml
+++ b/fip/p2p/config/application.yml
@@ -27,7 +27,7 @@ spring:
         - id: fip1
           uri: ${FIP_MAIN_SERVICE:http://fip-main:8090}
           predicates:
-            - Path=/fip/v1/clusters/self
+            - Path=/fip/v1/clusters/**
           filters:
             - RewritePath= /fip/v1/(?<segment>.*),/$\{segment}
             - CheckAuth=false
@@ -55,16 +55,15 @@ spring:
             - Path=/fip/v1/repositories
           filters:
             - RewritePath= /fip/v1/(?<segment>.*),/$\{segment}
-            - CheckAuth=false
+#            - CheckAuth=false
 
         - id: fip5
           uri: ${FIP_MAIN_SERVICE:http://fip-main:8090}
           predicates:
-            - Path=/fip/v1//repositories/*
+            - Path=/fip/v1/repositories/*
           filters:
             - RewritePath= /fip/v1/(?<segment>.*),/$\{segment}
             - CheckAuth=false
-
 
         - id: auth
           uri: ${PILOT_SERVICE:http://pilot:8080}
