--- a/prometheus/config/prometheus-standalone.yaml
+++ b/prometheus/config/prometheus-standalone.yaml
@@ -1,4 +1,4 @@
-# my global config
+#my global config
 global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
@@ -32,3 +32,8 @@ scrape_configs:
     metrics_path: '/nacos/actuator/prometheus'
     static_configs:
       - targets: ['nacos:8848']
+
+  - job_name: 'fip'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['10.10.25.87:8099']
