--- a/fip-linkage2/fip-main/config/application-fp_clusters.yaml
+++ b/fip-linkage2/fip-main/config/application-fp_clusters.yaml
@@ -6,7 +6,7 @@ fp-clusters:
       region:
         province: 上海市
         city: 上海市
-        county: 浦东新区
+        county: 浦东区
       product_info:
         product_name: fp
         product_version: 1.8.4
