--- a/mongo/docker-compose.yaml
+++ b/mongo/docker-compose.yaml
@@ -2,9 +2,10 @@ version: "3"
 
 services:
   mongo:
-    image: mongo:4.0.6
+#    image: mongo:4.0.6
+    image: it-artifactory.yitu-inc.com/docker-pro/opod/mongo:3.4-xenial
     restart: always
     ports:
-      - 27017:27017
+      - 27018:27017
     volumes:
-      - ./data/db:/data/db
+      - ./mongo:/data/db
