--- a/kafka/config/kafka-server.properties
+++ b/kafka/config/kafka-server.properties
@@ -32,7 +32,7 @@ broker.id=0
 
 
 listeners=PLAINTEXT://:9092  
-advertised.listeners=PLAINTEXT://kafka:9092
+advertised.listeners=PLAINTEXT://10.10.25.27:9092
 
 
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
