--- a/nacos/docker-compose.yml
+++ b/nacos/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "2"
 services:
   nacos-server:
-    image: nacos/nacos-server:1.1.3
+#    image: nacos/nacos-server:1.4.0
+    image: it-artifactory.yitu-inc.com/docker-local/big-data/nacos:1.4.0_hotfix
     environment:
       - PREFER_HOST_MODE=hostname
       - MODE=standalone
