--- a/redis/docker-compose.yaml
+++ b/redis/docker-compose.yaml
@@ -6,4 +6,8 @@ services:
       - "6379:6379"
     volumes:
       - ./data:/data
-#      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    #  - ./config/redis.conf:/usr/local/etc/redis/redis.conf
+    # command:
+    #  - "redis-server"
+    #  - "/usr/local/etc/redis/redis.conf"
+    #  - "--requirepass xx"
